manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: mysnacks-nopcommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysnacks-nopcommerce
  template:
    metadata:
      labels:
        app: mysnacks-nopcommerce
    spec:
      containers:
        - name: nopcommerce
          image: eisajanyan/nopcommerce:staging
          ports:
          - containerPort: 5000
          volumeMounts:
            - mountPath: /app/App_Data/dataSettings.json
              name: datasettings-config
              subPath: dataSettings.json
      volumes:
      - name: datasettings-config
        configMap:
          name: mysnacks-datasettings-config
